@@ -1,3 +1,5 @@
+2009/07/3:
+	- code cleanup in Display
 2009/06/30:
 	- operators overloading in GEOM_Parameter class
 	- better compilation of SalomeGEOM (with the /Od) flag
